<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HotelSync</string>

    <!-- Campos de usuarios  -->
    <string name="titleUser">Usuarios</string>
    <string name="labelRol">Selecciona tu rol:</string>
    <string name="rbHuesped">Huésped</string>
    <string name="rbEmpleado">Empleado</string>
    <string name="labelCedula">Cédula</string>
    <string name="labelNombre">Nombre</string>
    <string name="labelApellido">Apellido</string>
    <string name="labelTelefono">Teléfono</string>
    <string name="labelCorreo">Correo</string>
    <string name="btnInsertar">Insertar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnActualizar">Actualizar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnRegresar">Regresar</string>
    <string name="listTitle">Lista de registros</string>

    <string name="editTextCedula">Ingrese la cedula</string>
    <string name="editTextNombre">Ingrese el nombre</string>
    <string name="editTextApellido">Ingrese el apellido</string>
    <string name="editTextTelefono">Ingrese el telefono</string>
    <string name="editTextCorreo">Ingrese el correo</string>


    <!-- Campos de Main  -->
    <string name="btnHuesped">Huespedes</string>
    <string name="btnEmpleado">Empleados</string>

    <string name="labelDescrip">Gestion moderna de reservas</string>
    <string name="listRole">Selecciona tu rol</string>


    <!-- Campos de Reserva  -->
    <string name="btnReservar">Reservar</string>
    <string name="btnEditarReserHuspe">Editar</string>

    <string name="labelDatosHuesped">Datos Huéped</string>
    <string name="labelDetalleReserva">Detalles de la Reserva</string>
    <string name="edittextFechainicio">Fecha inicio</string>
    <string name="edittextFechaFin">Feche fin</string>
    <string name="edittexCantHabi">Numero de habitaciones</string>

    <!-- Campos de vista principal huespedes  -->
    <string name="labelVistaHuesped">Vista principal de los Huespedes</string>
    <string name="btnGestionReseva">Gestion de Reservaciones</string>
    <string name="btnCreacionUsuario">Creacion de Usuarios</string>
    <string name="btnRegresarVista">Regresar</string>

    <!-- Campos de vista principal Empleado  -->
    <string name="labelVistaEmpleado">Vista principal de los Huespedes</string>
    <string name="btnCreacionEmpleado">Creacion de Empleado</string>
    <string name="btnGestionHabitacion">Gestion de Habitaciones</string>

    <!-- Campos de Habitacion -->
    <string name="labelIdentificacionHabi">Identificación</string>
    <string name="labelUbicacionHabi">Ubicación</string>
    <string name="labelInfoHabitacion">Información de Habitación</string>
    <string name="labelTarivaHabi">Tarifa y Cantidad</string>
    <string name="labelListaHabi">Lista de Habitaciones</string>

    <string name="editTextCodigoHabi">Código</string>
    <string name="editTextNumeroHabi">Número</string>
    <string name="editTextDescripcionHabi">Descripción</string>
    <string name="editTextPrecioHabi">Precio/noche</string>
    <string name="editTextCantidadHabi">Cantidad</string>
    <string name="editTextPisoHabi">Piso</string>
    <string name="editTextNombreHabi">Nombre Habitacion</string>

    <!-- Campos de Gestión de empleado -->
    <string name="datos_de_identificaci_n">Datos de Identificación</string>
    <string name="c_digo_reserva">Código reserva</string>
    <string name="c_dula_empleado">Cédula empleado</string>
    <string name="datos_del_hu_sped">Datos del Huésped</string>
    <string name="c_dula_hu_sped">Cédula huésped</string>
    <string name="total">Total</string>
    <string name="fechas_de_reserva">Fechas de Reserva</string>
    <string name="inicio_yyyy_mm_dd">Inicio (YYYY-MM-DD)</string>
    <string name="fin_yyyy_mm_dd">Fin (YYYY-MM-DD)</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">Buscar</string>
    <string name="volver">Volver</string>
    <string name="fin">"Fin: "</string>
    <string name="c_dula">"Cédula: "</string>
    <string name="nombre">"Nombre: "</string>
    <string name="estado">"Estado: "</string>
    <string name="inicio">"Inicio: "</string>
    <string name="cedula">"Cédula: "</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="guardar">Guardar</string>
    <string name="vol">Volver</string>
    <string name="registros_actuales">Registros actuales</string>
    <string name="editar_reserva">Editar Reserva</string>
    <string name="cantidad_de_habitaciones">Cantidad de habitaciones</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="volver1">Volver</string>
    <string name="c_digo">"Código: "</string>
    <string name="n_mero">"Número: "</string>
    <string name="estado2">"Estado: "</string>
    <string name="piso">"Piso: "</string>
    <string name="nombre2">"Nombre: "</string>
    <string name="descripci_n">"Descripción: "</string>
    <string name="precio_noche">"Precio/noche: "</string>
    <string name="capacidad">"Capacidad: "</string>
    <string name="c_digo2">Código</string>
    <string name="n_mero3">Número</string>
    <string name="piso2">Piso</string>
    <string name="nombre3">Nombre</string>
    <string name="descripci_n2">Descripción</string>
    <string name="precio_noche3">Precio/noche</string>
    <string name="capacidad2">Capacidad</string>
    <string name="guardar3">Guardar</string>
    <string name="regresar">Regresar</string>


</resources>
