<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/datos_de_identificaci_n"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/txtCodigoReserva"
                android:hint="@string/c_digo_reserva"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/txtCedulaEmpleado"
                android:hint="@string/c_dula_empleado"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/datos_del_hu_sped"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/txtCedulaHuesped"
                android:hint="@string/c_dula_hu_sped"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/txtTotal"
                android:hint="@string/total"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/fechas_de_reserva"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/txtFechaInicio"
                android:hint="@string/inicio_yyyy_mm_dd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:id="@+id/txtFechaFin"
                android:hint="@string/fin_yyyy_mm_dd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btnConfirmar"
                android:text="@string/confirmar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"/>

            <Button
                android:id="@+id/btnCancelar"
                android:text="@string/cancelar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btnBuscar"
                android:text="@string/buscar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"/>

            <Button
                android:id="@+id/btnAnterior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Anterior"
                android:text="@string/volver" />
        </LinearLayout>

        <ListView
            android:id="@+id/listaReservas"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:dividerHeight="1dp"/>

    </LinearLayout>

</ScrollView>
