<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9F9"
    tools:context=".EmpleadoActivity">

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FDFAFA"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/BtnHabitacion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#E0F7FA"
            android:onClick="reservaHuesped"
            android:text="@string/btnGestionReseva"
            android:textAllCaps="false"
            android:textColor="#00796B" />

        <Button
            android:id="@+id/BtnReservas"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#F5F5F5"
            android:onClick="usuario"
            android:text="@string/btnCreacionUsuario"
            android:textAllCaps="false"
            android:textColor="#666666" />

        <Button
            android:id="@+id/btnAnterior"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="#F5F5F5"
            android:onClick="Volver"
            android:text="@string/btnRegresarVista"
            android:textAllCaps="false"
            android:textColor="#666666" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="180dp"
        android:text="@string/labelVistaHuesped"
        android:textColor="#0B0A0A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
